# CalculadoraCedears

./: .gitignore  CalculadoraCedears.sln  CaluladoraCedears.sln  README.md
.github/workflows/: deploy-api.yml  publish-release.yml
CalculadoraCedears.Api/: CalculadoraCedears.Api.csproj  CalculadoraCedears.Api.xml  CaluladoraCedears.Api.xml  Program.cs  appsettings.Development.json  appsettings.json
CalculadoraCedears.Api.Db/: CalculadoraCedears.Api.Db.sqlproj
CalculadoraCedears.Api.Db/Scripts/: Script.PostDeployment.sql
CalculadoraCedears.Api.Dto/: BrokerDto.cs  CalculadoraCedears.Api.Dto.csproj  CedaerDto.cs  CedearDto.cs  CedearStockHoldingDto.cs  CedearWithStockHoldingDto.cs  GoogleAccessTokenDto.cs
CalculadoraCedears.Api.Unit.Tests/: CalculadoraCedears.Api.Unit.Tests.csproj
CalculadoraCedears.Desktop/: .env  components.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
CalculadoraCedears.Desktop/src-tauri/: Cargo.toml  build.rs  oauth_config.json  tauri.conf.json
CalculadoraCedears.Desktop/src-tauri/capabilities/: default.json  desktop.json
CalculadoraCedears.Desktop/src-tauri/icons/: icon.icns
CalculadoraCedears.Desktop/src-tauri/src/: httpclientwrapper.rs  lib.rs  login.rs  main.rs  utils.rs
CaluladoraCedears.Api/: CaluladoraCedears.Api.csproj  CaluladoraCedears.Api.xml  Program.cs
CaluladoraCedears.Api.Db/: CaluladoraCedears.Api.Db.publish.xml  CaluladoraCedears.Api.Db.sqlproj
CaluladoraCedears.Api.Dto/: CedaerDto.cs
CaluladoraCedears.Api.Unit.Tests/: CaluladoraCedears.Api.Unit.Tests.csproj
(+239 files in other folders)
