[package]
name = "CalculadoraCedears"
version = "1.0.0"
description = "Calculadora de Cedears"
authors = ["Leonardo Faggiani"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "calculadoracedears_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.0", features = ["dangerous-settings"] }
tauri-plugin-websocket = "2"
tauri-plugin-oauth = "2"
tauri-plugin-store = "2.0.0"
tauri-plugin-shell = "2"
url = "2.4"
rand = "0.8"
base64 = "0.22"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
